c-os/kernel/syscall/syscall.h

#ifndef QOS_SYSCALL_H
#define QOS_SYSCALL_H

#include <stdint.h>

#define QOS_SYSCALL_MAX 128U

enum {
    SYSCALL_OP_FORK = 10u,
    SYSCALL_OP_EXEC = 11u,

    SYSCALL_OP_CONST = 1u,
    SYSCALL_OP_ADD = 2u,
    SYSCALL_OP_QUERY = 3u,
    SYSCALL_OP_KILL = 4u,
    SYSCALL_OP_SIGPENDING = 5u,
    SYSCALL_OP_SIGACTION = 6u,
    SYSCALL_OP_SIGPROCMASK = 7u,
    SYSCALL_OP_SIGALTSTACK = 8u,
    SYSCALL_OP_SIGSUSPEND = 9u,
    SYSCALL_OP_SIGRETURN = 12u,
    SYSCALL_OP_EXIT = 13u,
    SYSCALL_OP_GETPID = 14u,
    SYSCALL_OP_WAITPID = 15u,
    SYSCALL_OP_STAT = 16u,
    SYSCALL_OP_MKDIR = 17u,
    SYSCALL_OP_UNLINK = 18u,
    SYSCALL_OP_CHDIR = 19u,
    SYSCALL_OP_GETCWD = 20u,
    SYSCALL_OP_OPEN = 21u,
    SYSCALL_OP_READ = 22u,
    SYSCALL_OP_WRITE = 23u,
    SYSCALL_OP_CLOSE = 24u,
    SYSCALL_OP_DUP2 = 25u,
    SYSCALL_OP_MMAP = 26u,
    SYSCALL_OP_MUNMAP = 27u,
    SYSCALL_OP_YIELD = 28u,
    SYSCALL_OP_SLEEP = 29u,
    SYSCALL_OP_SOCKET = 30u,
    SYSCALL_OP_BIND = 31u,
    SYSCALL_OP_LISTEN = 32u,
    SYSCALL_OP_ACCEPT = 33u,
    SYSCALL_OP_CONNECT = 34u,
    SYSCALL_OP_SEND = 35u,
    SYSCALL_OP_RECV = 36u,
    SYSCALL_OP_GETDENTS = 37u,
    SYSCALL_OP_LSEEK = 38u,
    SYSCALL_OP_PIPE = 39u,
};

enum {
    SYSCALL_QUERY_INIT_STATE = 1u,
    SYSCALL_QUERY_PMM_TOTAL = 2u,
    SYSCALL_QUERY_PMM_FREE = 3u,
    SYSCALL_QUERY_SCHED_COUNT = 4u,
    SYSCALL_QUERY_VFS_COUNT = 5u,
    SYSCALL_QUERY_NET_QUEUE_LEN = 6u,
    SYSCALL_QUERY_DRIVERS_COUNT = 7u,
    SYSCALL_QUERY_SYSCALL_COUNT = 8u,
    SYSCALL_QUERY_PROC_COUNT = 9u,
};

enum {
    SYSCALL_NR_FORK = 0u,
    SYSCALL_NR_EXEC = 1u,
    SYSCALL_NR_EXIT = 2u,
    SYSCALL_NR_GETPID = 3u,
    SYSCALL_NR_WAITPID = 4u,
    SYSCALL_NR_OPEN = 5u,
    SYSCALL_NR_READ = 6u,
    SYSCALL_NR_WRITE = 7u,
    SYSCALL_NR_CLOSE = 8u,
    SYSCALL_NR_DUP2 = 9u,
    SYSCALL_NR_MMAP = 10u,
    SYSCALL_NR_MUNMAP = 11u,
    SYSCALL_NR_YIELD = 12u,
    SYSCALL_NR_SLEEP = 13u,
    SYSCALL_NR_SOCKET = 14u,
    SYSCALL_NR_BIND = 15u,
    SYSCALL_NR_LISTEN = 16u,
    SYSCALL_NR_ACCEPT = 17u,
    SYSCALL_NR_CONNECT = 18u,
    SYSCALL_NR_SEND = 19u,
    SYSCALL_NR_RECV = 20u,
    SYSCALL_NR_STAT = 21u,
    SYSCALL_NR_MKDIR = 22u,
    SYSCALL_NR_UNLINK = 23u,
    SYSCALL_NR_GETDENTS = 24u,
    SYSCALL_NR_LSEEK = 25u,
    SYSCALL_NR_PIPE = 26u,
    SYSCALL_NR_CHDIR = 27u,
    SYSCALL_NR_GETCWD = 28u,

    SYSCALL_NR_KILL = 29u,
    SYSCALL_NR_SIGACTION = 30u,
    SYSCALL_NR_SIGPROCMASK = 31u,
    SYSCALL_NR_SIGRETURN = 32u,
    SYSCALL_NR_SIGPENDING = 33u,
    SYSCALL_NR_SIGSUSPEND = 34u,
    SYSCALL_NR_SIGALTSTACK = 35u,

    SYSCALL_NR_QUERY_INIT_STATE = 64u,
    SYSCALL_NR_QUERY_PMM_TOTAL = 65u,
    SYSCALL_NR_QUERY_PMM_FREE = 66u,
    SYSCALL_NR_QUERY_SCHED_COUNT = 67u,
    SYSCALL_NR_QUERY_VFS_COUNT = 68u,
    SYSCALL_NR_QUERY_NET_QUEUE_LEN = 69u,
    SYSCALL_NR_QUERY_DRIVERS_COUNT = 70u,
    SYSCALL_NR_QUERY_SYSCALL_COUNT = 71u,
    SYSCALL_NR_QUERY_PROC_COUNT = 72u,
};

enum {
    SIG_BLOCK = 0u,
    SIG_UNBLOCK = 1u,
    SIG_SETMASK = 2u,
};

void qos_syscall_reset(void);
int qos_syscall_register(uint32_t nr, uint32_t op, int64_t value);
int qos_syscall_unregister(uint32_t nr);
int64_t qos_syscall_dispatch(uint32_t nr, uint64_t a0, uint64_t a1, uint64_t a2, uint64_t a3);
uint32_t qos_syscall_count(void);

void syscall_init(void);

#endif